ops/kubernetes/kustomize/overlays/local-catarse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catarse
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: catarse
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: "catarse"
              servicePort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catarse-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: catarse-api
spec:
  rules:
    - http:
        paths:
          - path: /v1/projects(/|$)(.*)
            backend:
              serviceName: "project-service-api"
              servicePort: 3002
          - path: /api_token
            backend:
              serviceName: "common-proxy"
              servicePort: 3013
